--- a/src/requirements-app.txt
+++ b/src/requirements-app.txt
@@ -6,6 +6,8 @@
 #
 anticaptchaofficial==1.0.31
     # via -r src/requirements-app.in
+appdirs==1.4.4
+    # via pyppeteer
 asgiref==3.4.1
     # via mitmproxy
 attrs==21.2.0
@@ -28,7 +30,7 @@ certifi==2021.5.30
     #   selenium-wire
 cffi==1.14.6
     # via cryptography
-charset-normalizer==2.0.4
+charset-normalizer==2.0.6
     # via requests
 click==8.0.1
     # via
@@ -47,7 +49,7 @@ cssselect==1.1.0
     # via
     #   parsel
     #   scrapy
-faker==8.12.1
+faker==8.14.0
     # via -r src/requirements-app.in
 flask==2.0.1
     # via mitmproxy
@@ -72,6 +74,8 @@ idna==3.2
     # via
     #   hyperlink
     #   requests
+importlib-metadata==4.8.1
+    # via pyppeteer
 incremental==21.3.0
     # via twisted
 itemadapter==0.4.0
@@ -98,7 +102,7 @@ lxml==4.6.3
     #   scrapy
 markupsafe==2.0.1
     # via jinja2
-mitmproxy==7.0.2
+mitmproxy==7.0.3
     # via -r src/requirements-app.in
 msgpack==1.0.2
     # via mitmproxy
@@ -114,7 +118,7 @@ passlib==1.7.4
     # via mitmproxy
 protego==0.1.16
     # via scrapy
-protobuf==3.17.3
+protobuf==3.18.0
     # via mitmproxy
 publicsuffix2==2.20191221
     # via mitmproxy
@@ -132,6 +136,8 @@ pycparser==2.20
     # via cffi
 pydispatcher==2.0.5
     # via scrapy
+pyee==8.2.2
+    # via pyppeteer
 pyopenssl==20.0.1
     # via
     #   mitmproxy
@@ -143,6 +149,8 @@ pyparsing==2.4.7
     #   selenium-wire
 pyperclip==1.8.2
     # via mitmproxy
+pyppeteer==0.2.6
+    # via -r src/requirements-app.in
 pysocks==1.7.1
     # via selenium-wire
 python-anticaptcha==0.7.1
@@ -156,7 +164,7 @@ requests==2.26.0
     #   -r src/requirements-app.in
     #   anticaptchaofficial
     #   python-anticaptcha
-ruamel.yaml==0.17.10
+ruamel.yaml==0.17.16
     # via mitmproxy
 ruamel.yaml.clib==0.2.6
     # via ruamel.yaml
@@ -175,7 +183,6 @@ six==1.16.0
     #   automat
     #   parsel
     #   protego
-    #   protobuf
     #   pyopenssl
     #   python-anticaptcha
     #   python-dateutil
@@ -187,14 +194,17 @@ text-unidecode==1.3
     # via faker
 tornado==6.1
     # via mitmproxy
+tqdm==4.62.3
+    # via pyppeteer
 twisted==21.7.0
     # via scrapy
-typing-extensions==3.10.0.1
+typing-extensions==3.10.0.2
     # via twisted
-ujson==4.1.0
+ujson==4.2.0
     # via -r src/requirements-app.in
-urllib3==1.26.6
+urllib3==1.26.7
     # via
+    #   pyppeteer
     #   requests
     #   selenium
 urwid==2.1.2
@@ -204,12 +214,16 @@ w3lib==1.22.0
     #   itemloaders
     #   parsel
     #   scrapy
+websockets==9.1
+    # via pyppeteer
 werkzeug==2.0.1
     # via flask
 wsproto==1.0.0
     # via
     #   mitmproxy
     #   selenium-wire
+zipp==3.5.0
+    # via importlib-metadata
 zope.interface==5.4.0
     # via
     #   scrapy
