--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
-ansible==4.6.0
+ansible==4.7.0
     # via -r requirements-dev.in
-ansible-core==2.11.5
+ansible-core==2.11.6
     # via ansible
 anticaptchaofficial==1.0.31
     # via -r src/requirements-app.txt
@@ -18,12 +18,19 @@ asgiref==3.4.1
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
+async-generator==1.10
+    # via
+    #   -r src/requirements-app.txt
+    #   trio
+    #   trio-websocket
 attrs==21.2.0
     # via
     #   -r src/requirements-app.txt
     #   automat
+    #   outcome
     #   pytest
     #   service-identity
+    #   trio
     #   twisted
 automat==20.2.0
     # via
@@ -42,23 +49,25 @@ brotli==1.0.9
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
-certifi==2021.5.30
+    #   selenium-wire
+certifi==2021.10.8
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
     #   requests
     #   selenium-wire
-cffi==1.14.6
+    #   urllib3
+cffi==1.15.0
     # via
     #   -r src/requirements-app.txt
     #   cryptography
 cfgv==3.3.1
     # via pre-commit
-charset-normalizer==2.0.6
+charset-normalizer==2.0.7
     # via
     #   -r src/requirements-app.txt
     #   requests
-click==8.0.1
+click==8.0.3
     # via
     #   -r src/requirements-app.txt
     #   black
@@ -69,7 +78,7 @@ constantly==15.1.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-coverage==5.5
+coverage[toml]==6.0.2
     # via pytest-cov
 cryptography==3.4.8
     # via
@@ -79,6 +88,7 @@ cryptography==3.4.8
     #   pyopenssl
     #   scrapy
     #   service-identity
+    #   urllib3
 cssselect==1.1.0
     # via
     #   -r src/requirements-app.txt
@@ -86,11 +96,11 @@ cssselect==1.1.0
     #   scrapy
 distlib==0.3.3
     # via virtualenv
-faker==8.14.0
+faker==9.5.0
     # via -r src/requirements-app.txt
-filelock==3.1.0
+filelock==3.3.1
     # via virtualenv
-flask==2.0.1
+flask==2.0.2
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
@@ -99,7 +109,7 @@ h11==0.12.0
     #   -r src/requirements-app.txt
     #   mitmproxy
     #   wsproto
-h2==4.0.0
+h2==4.1.0
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
@@ -118,13 +128,15 @@ hyperlink==21.0.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-identify==2.2.15
+identify==2.3.0
     # via pre-commit
-idna==3.2
+idna==3.3
     # via
     #   -r src/requirements-app.txt
     #   hyperlink
     #   requests
+    #   trio
+    #   urllib3
 importlib-metadata==4.8.1
     # via
     #   -r src/requirements-app.txt
@@ -148,7 +160,7 @@ itsdangerous==2.0.1
     # via
     #   -r src/requirements-app.txt
     #   flask
-jinja2==3.0.1
+jinja2==3.0.2
     # via
     #   -r src/requirements-app.txt
     #   ansible-core
@@ -175,7 +187,7 @@ markupsafe==2.0.1
     # via
     #   -r src/requirements-app.txt
     #   jinja2
-mitmproxy==7.0.3
+mitmproxy==7.0.4
     # via -r src/requirements-app.txt
 msgpack==1.0.2
     # via
@@ -191,6 +203,10 @@ numpy==1.21.2
     #   opencv-python
 opencv-python==4.5.3.56
     # via -r src/requirements-app.txt
+outcome==1.1.0
+    # via
+    #   -r src/requirements-app.txt
+    #   trio
 packaging==21.0
     # via
     #   ansible-core
@@ -206,11 +222,11 @@ passlib==1.7.4
     #   mitmproxy
 pathspec==0.9.0
     # via black
-pep517==0.11.0
+pep517==0.12.0
     # via pip-tools
-pillow==8.3.2
+pillow==8.4.0
     # via -r requirements-dev.in
-pip-tools==6.3.0
+pip-tools==6.4.0
     # via -r requirements-dev.in
 platformdirs==2.4.0
     # via
@@ -224,7 +240,7 @@ protego==0.1.16
     # via
     #   -r src/requirements-app.txt
     #   scrapy
-protobuf==3.18.0
+protobuf==3.18.1
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
@@ -266,6 +282,7 @@ pyopenssl==20.0.1
     #   mitmproxy
     #   scrapy
     #   selenium-wire
+    #   urllib3
 pyparsing==2.4.7
     # via
     #   -r src/requirements-app.txt
@@ -278,6 +295,8 @@ pyperclip==1.8.2
     #   mitmproxy
 pyppeteer==0.2.6
     # via -r src/requirements-app.txt
+pyppeteer-stealth==2.7.3
+    # via -r src/requirements-app.txt
 pysocks==1.7.1
     # via
     #   -r src/requirements-app.txt
@@ -286,7 +305,7 @@ pytest==6.2.5
     # via
     #   -r requirements-dev.in
     #   pytest-cov
-pytest-cov==2.12.1
+pytest-cov==3.0.0
     # via -r requirements-dev.in
 python-anticaptcha==0.7.1
     # via -r src/requirements-app.txt
@@ -294,9 +313,9 @@ python-dateutil==2.8.2
     # via
     #   -r src/requirements-app.txt
     #   faker
-python-dotenv==0.19.0
+python-dotenv==0.19.1
     # via -r requirements-dev.in
-pyyaml==5.4.1
+pyyaml==6.0
     # via
     #   ansible-core
     #   pre-commit
@@ -304,7 +323,7 @@ queuelib==1.6.2
     # via
     #   -r src/requirements-app.txt
     #   scrapy
-regex==2021.9.24
+regex==2021.10.8
     # via black
 requests==2.26.0
     # via
@@ -323,11 +342,11 @@ ruamel.yaml.clib==0.2.6
     #   ruamel.yaml
 scrapy==2.4.1
     # via -r src/requirements-app.txt
-selenium==3.141.0
+selenium==4.0.0
     # via
     #   -r src/requirements-app.txt
     #   selenium-wire
-selenium-wire==4.5.2
+selenium-wire==4.5.3
     # via -r src/requirements-app.txt
 service-identity==21.1.0
     # via
@@ -345,10 +364,15 @@ six==1.16.0
     #   service-identity
     #   virtualenv
     #   w3lib
+sniffio==1.2.0
+    # via
+    #   -r src/requirements-app.txt
+    #   trio
 sortedcontainers==2.4.0
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
+    #   trio
 text-unidecode==1.3
     # via
     #   -r src/requirements-app.txt
@@ -357,10 +381,10 @@ toml==0.10.2
     # via
     #   pre-commit
     #   pytest
-    #   pytest-cov
 tomli==1.2.1
     # via
     #   black
+    #   coverage
     #   pep517
 tornado==6.1
     # via
@@ -370,6 +394,15 @@ tqdm==4.62.3
     # via
     #   -r src/requirements-app.txt
     #   pyppeteer
+trio==0.19.0
+    # via
+    #   -r src/requirements-app.txt
+    #   selenium
+    #   trio-websocket
+trio-websocket==0.9.2
+    # via
+    #   -r src/requirements-app.txt
+    #   selenium
 twisted==21.7.0
     # via
     #   -r src/requirements-app.txt
@@ -381,7 +414,7 @@ typing-extensions==3.10.0.2
     #   twisted
 ujson==4.2.0
     # via -r src/requirements-app.txt
-urllib3==1.26.7
+urllib3[secure]==1.26.7
     # via
     #   -r src/requirements-app.txt
     #   pyppeteer
@@ -403,7 +436,7 @@ websockets==9.1
     # via
     #   -r src/requirements-app.txt
     #   pyppeteer
-werkzeug==2.0.1
+werkzeug==2.0.2
     # via
     #   -r src/requirements-app.txt
     #   flask
@@ -414,7 +447,8 @@ wsproto==1.0.0
     #   -r src/requirements-app.txt
     #   mitmproxy
     #   selenium-wire
-zipp==3.5.0
+    #   trio-websocket
+zipp==3.6.0
     # via
     #   -r src/requirements-app.txt
     #   importlib-metadata
@@ -427,6 +461,7 @@ zstandard==0.15.2
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
+    #   selenium-wire
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
