--- a/src/requirements-app.txt
+++ b/src/requirements-app.txt
@@ -10,10 +10,16 @@ appdirs==1.4.4
     # via pyppeteer
 asgiref==3.4.1
     # via mitmproxy
+async-generator==1.10
+    # via
+    #   trio
+    #   trio-websocket
 attrs==21.2.0
     # via
     #   automat
+    #   outcome
     #   service-identity
+    #   trio
     #   twisted
 automat==20.2.0
     # via twisted
@@ -22,17 +28,20 @@ blinker==1.4
     #   mitmproxy
     #   selenium-wire
 brotli==1.0.9
-    # via mitmproxy
-certifi==2021.5.30
+    # via
+    #   mitmproxy
+    #   selenium-wire
+certifi==2021.10.8
     # via
     #   mitmproxy
     #   requests
     #   selenium-wire
-cffi==1.14.6
+    #   urllib3
+cffi==1.15.0
     # via cryptography
-charset-normalizer==2.0.6
+charset-normalizer==2.0.7
     # via requests
-click==8.0.1
+click==8.0.3
     # via
     #   -r src/requirements-app.in
     #   flask
@@ -45,19 +54,20 @@ cryptography==3.4.8
     #   pyopenssl
     #   scrapy
     #   service-identity
+    #   urllib3
 cssselect==1.1.0
     # via
     #   parsel
     #   scrapy
-faker==8.14.0
+faker==9.5.0
     # via -r src/requirements-app.in
-flask==2.0.1
+flask==2.0.2
     # via mitmproxy
 h11==0.12.0
     # via
     #   mitmproxy
     #   wsproto
-h2==4.0.0
+h2==4.1.0
     # via
     #   mitmproxy
     #   selenium-wire
@@ -70,10 +80,12 @@ hyperframe==6.0.1
     #   selenium-wire
 hyperlink==21.0.0
     # via twisted
-idna==3.2
+idna==3.3
     # via
     #   hyperlink
     #   requests
+    #   trio
+    #   urllib3
 importlib-metadata==4.8.1
     # via pyppeteer
 incremental==21.3.0
@@ -86,7 +98,7 @@ itemloaders==1.0.4
     # via scrapy
 itsdangerous==2.0.1
     # via flask
-jinja2==3.0.1
+jinja2==3.0.2
     # via flask
 jmespath==0.10.0
     # via itemloaders
@@ -102,7 +114,7 @@ lxml==4.6.3
     #   scrapy
 markupsafe==2.0.1
     # via jinja2
-mitmproxy==7.0.3
+mitmproxy==7.0.4
     # via -r src/requirements-app.in
 msgpack==1.0.2
     # via mitmproxy
@@ -110,6 +122,8 @@ numpy==1.21.2
     # via opencv-python
 opencv-python==4.5.3.56
     # via -r src/requirements-app.in
+outcome==1.1.0
+    # via trio
 parsel==1.6.0
     # via
     #   itemloaders
@@ -118,7 +132,7 @@ passlib==1.7.4
     # via mitmproxy
 protego==0.1.16
     # via scrapy
-protobuf==3.18.0
+protobuf==3.18.1
     # via mitmproxy
 publicsuffix2==2.20191221
     # via mitmproxy
@@ -143,6 +157,7 @@ pyopenssl==20.0.1
     #   mitmproxy
     #   scrapy
     #   selenium-wire
+    #   urllib3
 pyparsing==2.4.7
     # via
     #   mitmproxy
@@ -150,6 +165,8 @@ pyparsing==2.4.7
 pyperclip==1.8.2
     # via mitmproxy
 pyppeteer==0.2.6
+    # via -r src/requirements-app.in
+pyppeteer-stealth==2.7.3
     # via -r src/requirements-app.in
 pysocks==1.7.1
     # via selenium-wire
@@ -170,11 +187,11 @@ ruamel.yaml.clib==0.2.6
     # via ruamel.yaml
 scrapy==2.4.1
     # via -r src/requirements-app.in
-selenium==3.141.0
+selenium==4.0.0
     # via
     #   -r src/requirements-app.in
     #   selenium-wire
-selenium-wire==4.5.2
+selenium-wire==4.5.3
     # via -r src/requirements-app.in
 service-identity==21.1.0
     # via scrapy
@@ -188,21 +205,31 @@ six==1.16.0
     #   python-dateutil
     #   service-identity
     #   w3lib
+sniffio==1.2.0
+    # via trio
 sortedcontainers==2.4.0
-    # via mitmproxy
+    # via
+    #   mitmproxy
+    #   trio
 text-unidecode==1.3
     # via faker
 tornado==6.1
     # via mitmproxy
 tqdm==4.62.3
     # via pyppeteer
+trio==0.19.0
+    # via
+    #   selenium
+    #   trio-websocket
+trio-websocket==0.9.2
+    # via selenium
 twisted==21.7.0
     # via scrapy
 typing-extensions==3.10.0.2
     # via twisted
 ujson==4.2.0
     # via -r src/requirements-app.in
-urllib3==1.26.7
+urllib3[secure]==1.26.7
     # via
     #   pyppeteer
     #   requests
@@ -216,20 +243,23 @@ w3lib==1.22.0
     #   scrapy
 websockets==9.1
     # via pyppeteer
-werkzeug==2.0.1
+werkzeug==2.0.2
     # via flask
 wsproto==1.0.0
     # via
     #   mitmproxy
     #   selenium-wire
-zipp==3.5.0
+    #   trio-websocket
+zipp==3.6.0
     # via importlib-metadata
 zope.interface==5.4.0
     # via
     #   scrapy
     #   twisted
 zstandard==0.15.2
-    # via mitmproxy
+    # via
+    #   mitmproxy
+    #   selenium-wire
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
