--- a/src/Dockerfile.eval
+++ b/src/Dockerfile.eval
@@ -56,26 +56,26 @@ RUN CHROME_STRING=$(google-chrome --version) \
 #============================================
 # PhontomJS
 #============================================
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        ca-certificates \
-        bzip2 \
-        libfontconfig \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        curl \
-    && mkdir /tmp/phantomjs \
-    && curl -L https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 \
-           | tar -xj --strip-components=1 -C /tmp/phantomjs \
-    && cd /tmp/phantomjs \
-    && mv bin/phantomjs /usr/local/bin \
-    && apt-get purge --auto-remove -y \
-        curl \
-    && apt-get clean \
-    && rm -rf /tmp/* /var/lib/apt/lists/*
+#RUN apt-get update \
+#    && apt-get install -y --no-install-recommends \
+#        ca-certificates \
+#        bzip2 \
+#        libfontconfig \
+#    && apt-get clean \
+#    && rm -rf /var/lib/apt/lists/*
+#
+#RUN apt-get update \
+#    && apt-get install -y --no-install-recommends \
+#        curl \
+#    && mkdir /tmp/phantomjs \
+#    && curl -L https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 \
+#           | tar -xj --strip-components=1 -C /tmp/phantomjs \
+#    && cd /tmp/phantomjs \
+#    && mv bin/phantomjs /usr/local/bin \
+#    && apt-get purge --auto-remove -y \
+#        curl \
+#    && apt-get clean \
+#    && rm -rf /tmp/* /var/lib/apt/lists/*
 
 #============================================
 # Firefox & Geckodriver
@@ -92,10 +92,10 @@ RUN wget https://github.com/mozilla/geckodriver/releases/download/v0.30.0/geckod
 #============================================
 # chromium
 #============================================
-RUN apt-get install libxss1
-RUN wget -O /tmp/chrome-linux.zip https://storage.googleapis.com/chromium-browser-snapshots/Linux_x64/588429/chrome-linux.zip
-RUN mkdir -p ~/.local/share/pyppeteer/local-chromium/588429/
-RUN unzip /tmp/chrome-linux.zip -d ~/.local/share/pyppeteer/local-chromium/588429/
+#RUN apt-get install libxss1
+#RUN wget -O /tmp/chrome-linux.zip https://storage.googleapis.com/chromium-browser-snapshots/Linux_x64/588429/chrome-linux.zip
+#RUN mkdir -p ~/.local/share/pyppeteer/local-chromium/588429/
+#RUN unzip /tmp/chrome-linux.zip -d ~/.local/share/pyppeteer/local-chromium/588429/
 
 
 ENV OPENSSL_CONF=/etc/ssl/
