--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
-ansible==4.7.0
+ansible==4.9.0
     # via -r requirements-dev.in
 ansible-core==2.11.6
     # via ansible
@@ -36,9 +36,9 @@ automat==20.2.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-backports.entry-points-selectable==1.1.0
+backports.entry-points-selectable==1.1.1
     # via virtualenv
-black==21.9b0
+black==21.11b1
     # via -r requirements-dev.in
 blinker==1.4
     # via
@@ -74,11 +74,12 @@ click==8.0.3
     #   flask
     #   mitmproxy
     #   pip-tools
+    #   shub
 constantly==15.1.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-coverage[toml]==6.0.2
+coverage[toml]==6.2
     # via pytest-cov
 cryptography==3.4.8
     # via
@@ -96,9 +97,13 @@ cssselect==1.1.0
     #   scrapy
 distlib==0.3.3
     # via virtualenv
+docker-py==1.10.6
+    # via shub
+docker-pycreds==0.4.0
+    # via docker-py
 faker==9.5.0
     # via -r src/requirements-app.txt
-filelock==3.3.1
+filelock==3.4.0
     # via virtualenv
 flask==2.0.2
     # via
@@ -128,7 +133,7 @@ hyperlink==21.0.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-identify==2.3.0
+identify==2.4.0
     # via pre-commit
 idna==3.3
     # via
@@ -207,7 +212,7 @@ outcome==1.1.0
     # via
     #   -r src/requirements-app.txt
     #   trio
-packaging==21.0
+packaging==21.3
     # via
     #   ansible-core
     #   pytest
@@ -313,25 +318,33 @@ python-dateutil==2.8.2
     # via
     #   -r src/requirements-app.txt
     #   faker
-python-dotenv==0.19.1
+python-dotenv==0.19.2
     # via -r requirements-dev.in
 pyyaml==6.0
     # via
     #   ansible-core
     #   pre-commit
+    #   shub
 queuelib==1.6.2
     # via
     #   -r src/requirements-app.txt
     #   scrapy
-regex==2021.10.8
+regex==2021.11.10
     # via black
 requests==2.26.0
     # via
     #   -r src/requirements-app.txt
     #   anticaptchaofficial
+    #   docker-py
     #   python-anticaptcha
+    #   scrapinghub
+    #   shub
 resolvelib==0.5.4
     # via ansible-core
+retrying==1.3.3
+    # via
+    #   scrapinghub
+    #   shub
 ruamel.yaml==0.17.16
     # via
     #   -r src/requirements-app.txt
@@ -340,6 +353,8 @@ ruamel.yaml.clib==0.2.6
     # via
     #   -r src/requirements-app.txt
     #   ruamel.yaml
+scrapinghub==2.3.1
+    # via shub
 scrapy==2.4.1
     # via -r src/requirements-app.txt
 selenium==4.0.0
@@ -352,16 +367,22 @@ service-identity==21.1.0
     # via
     #   -r src/requirements-app.txt
     #   scrapy
+shub==2.10.0
+    # via -r requirements-dev.in
 six==1.16.0
     # via
     #   -r src/requirements-app.txt
     #   automat
+    #   docker-py
     #   parsel
     #   protego
     #   pyopenssl
     #   python-anticaptcha
     #   python-dateutil
+    #   retrying
+    #   scrapinghub
     #   service-identity
+    #   shub
     #   virtualenv
     #   w3lib
 sniffio==1.2.0
@@ -381,7 +402,8 @@ toml==0.10.2
     # via
     #   pre-commit
     #   pytest
-tomli==1.2.1
+    #   shub
+tomli==1.2.2
     # via
     #   black
     #   coverage
@@ -394,6 +416,7 @@ tqdm==4.62.3
     # via
     #   -r src/requirements-app.txt
     #   pyppeteer
+    #   shub
 trio==0.19.0
     # via
     #   -r src/requirements-app.txt
@@ -424,7 +447,7 @@ urwid==2.1.2
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
-virtualenv==20.8.1
+virtualenv==20.10.0
     # via pre-commit
 w3lib==1.22.0
     # via
@@ -432,6 +455,8 @@ w3lib==1.22.0
     #   itemloaders
     #   parsel
     #   scrapy
+websocket-client==1.2.1
+    # via docker-py
 websockets==9.1
     # via
     #   -r src/requirements-app.txt
