--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,11 +4,11 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
-ansible==4.9.0
+ansible==5.2.0
     # via -r requirements-dev.in
-ansible-core==2.11.6
+ansible-core==2.12.1
     # via ansible
-anticaptchaofficial==1.0.31
+anticaptchaofficial==1.0.34
     # via -r src/requirements-app.txt
 appdirs==1.4.4
     # via
@@ -23,7 +23,7 @@ async-generator==1.10
     #   -r src/requirements-app.txt
     #   trio
     #   trio-websocket
-attrs==21.2.0
+attrs==21.4.0
     # via
     #   -r src/requirements-app.txt
     #   automat
@@ -36,9 +36,7 @@ automat==20.2.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-backports.entry-points-selectable==1.1.1
-    # via virtualenv
-black==21.11b1
+black==21.12b0
     # via -r requirements-dev.in
 blinker==1.4
     # via
@@ -54,6 +52,7 @@ certifi==2021.10.8
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
+    #   pyppeteer
     #   requests
     #   selenium-wire
     #   urllib3
@@ -63,7 +62,7 @@ cffi==1.15.0
     #   cryptography
 cfgv==3.3.1
     # via pre-commit
-charset-normalizer==2.0.7
+charset-normalizer==2.0.10
     # via
     #   -r src/requirements-app.txt
     #   requests
@@ -79,7 +78,7 @@ constantly==15.1.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-coverage[toml]==6.2
+coverage[toml]==6.3
     # via pytest-cov
 cryptography==3.4.8
     # via
@@ -95,15 +94,15 @@ cssselect==1.1.0
     #   -r src/requirements-app.txt
     #   parsel
     #   scrapy
-distlib==0.3.3
+distlib==0.3.4
     # via virtualenv
 docker-py==1.10.6
     # via shub
 docker-pycreds==0.4.0
     # via docker-py
-faker==9.5.0
+faker==11.3.0
     # via -r src/requirements-app.txt
-filelock==3.4.0
+filelock==3.4.2
     # via virtualenv
 flask==2.0.2
     # via
@@ -133,7 +132,7 @@ hyperlink==21.0.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-identify==2.4.0
+identify==2.4.6
     # via pre-commit
 idna==3.3
     # via
@@ -142,7 +141,7 @@ idna==3.3
     #   requests
     #   trio
     #   urllib3
-importlib-metadata==4.8.1
+importlib-metadata==4.10.1
     # via
     #   -r src/requirements-app.txt
     #   pyppeteer
@@ -165,7 +164,7 @@ itsdangerous==2.0.1
     # via
     #   -r src/requirements-app.txt
     #   flask
-jinja2==3.0.2
+jinja2==3.0.3
     # via
     #   -r src/requirements-app.txt
     #   ansible-core
@@ -183,7 +182,7 @@ ldap3==2.9.1
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
-lxml==4.6.3
+lxml==4.7.1
     # via
     #   -r src/requirements-app.txt
     #   parsel
@@ -194,7 +193,7 @@ markupsafe==2.0.1
     #   jinja2
 mitmproxy==7.0.4
     # via -r src/requirements-app.txt
-msgpack==1.0.2
+msgpack==1.0.3
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
@@ -202,11 +201,11 @@ mypy-extensions==0.4.3
     # via black
 nodeenv==1.6.0
     # via pre-commit
-numpy==1.21.2
+numpy==1.22.1
     # via
     #   -r src/requirements-app.txt
     #   opencv-python
-opencv-python==4.5.3.56
+opencv-python==4.5.5.62
     # via -r src/requirements-app.txt
 outcome==1.1.0
     # via
@@ -229,17 +228,17 @@ pathspec==0.9.0
     # via black
 pep517==0.12.0
     # via pip-tools
-pillow==8.4.0
+pillow==9.0.0
     # via -r requirements-dev.in
 pip-tools==6.4.0
     # via -r requirements-dev.in
-platformdirs==2.4.0
+platformdirs==2.4.1
     # via
     #   black
     #   virtualenv
 pluggy==1.0.0
     # via pytest
-pre-commit==2.15.0
+pre-commit==2.17.0
     # via -r requirements-dev.in
 protego==0.1.16
     # via
@@ -253,7 +252,7 @@ publicsuffix2==2.20191221
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
-py==1.10.0
+py==1.11.0
     # via
     #   -r src/requirements-app.txt
     #   anticaptchaofficial
@@ -269,7 +268,7 @@ pyasn1-modules==0.2.8
     # via
     #   -r src/requirements-app.txt
     #   service-identity
-pycparser==2.20
+pycparser==2.21
     # via
     #   -r src/requirements-app.txt
     #   cffi
@@ -298,7 +297,7 @@ pyperclip==1.8.2
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
-pyppeteer==0.2.6
+pyppeteer==1.0.2
     # via -r src/requirements-app.txt
 pyppeteer-stealth==2.7.3
     # via -r src/requirements-app.txt
@@ -329,9 +328,7 @@ queuelib==1.6.2
     # via
     #   -r src/requirements-app.txt
     #   scrapy
-regex==2021.11.10
-    # via black
-requests==2.26.0
+requests==2.27.1
     # via
     #   -r src/requirements-app.txt
     #   anticaptchaofficial
@@ -339,6 +336,7 @@ requests==2.26.0
     #   python-anticaptcha
     #   scrapinghub
     #   shub
+    #   undetected-chromedriver
 resolvelib==0.5.4
     # via ansible-core
 retrying==1.3.3
@@ -357,11 +355,12 @@ scrapinghub==2.3.1
     # via shub
 scrapy==2.4.1
     # via -r src/requirements-app.txt
-selenium==4.0.0
+selenium==4.1.0
     # via
     #   -r src/requirements-app.txt
     #   selenium-wire
-selenium-wire==4.5.6
+    #   undetected-chromedriver
+selenium-wire==4.6.0
     # via -r src/requirements-app.txt
 service-identity==21.1.0
     # via
@@ -403,7 +402,7 @@ toml==0.10.2
     #   pre-commit
     #   pytest
     #   shub
-tomli==1.2.2
+tomli==1.2.3
     # via
     #   black
     #   coverage
@@ -430,14 +429,16 @@ twisted==21.7.0
     # via
     #   -r src/requirements-app.txt
     #   scrapy
-typing-extensions==3.10.0.2
+typing-extensions==4.0.1
     # via
     #   -r src/requirements-app.txt
     #   black
     #   twisted
-ujson==4.2.0
+ujson==5.1.0
     # via -r src/requirements-app.txt
-urllib3[secure]==1.26.7
+undetected-chromedriver==3.1.3
+    # via -r src/requirements-app.txt
+urllib3[secure]==1.26.8
     # via
     #   -r src/requirements-app.txt
     #   pyppeteer
@@ -447,7 +448,7 @@ urwid==2.1.2
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
-virtualenv==20.10.0
+virtualenv==20.13.0
     # via pre-commit
 w3lib==1.22.0
     # via
@@ -455,17 +456,18 @@ w3lib==1.22.0
     #   itemloaders
     #   parsel
     #   scrapy
-websocket-client==1.2.1
+websocket-client==1.2.3
     # via docker-py
-websockets==9.1
+websockets==10.1
     # via
     #   -r src/requirements-app.txt
     #   pyppeteer
+    #   undetected-chromedriver
 werkzeug==2.0.2
     # via
     #   -r src/requirements-app.txt
     #   flask
-wheel==0.37.0
+wheel==0.37.1
     # via pip-tools
 wsproto==1.0.0
     # via
@@ -473,7 +475,7 @@ wsproto==1.0.0
     #   mitmproxy
     #   selenium-wire
     #   trio-websocket
-zipp==3.6.0
+zipp==3.7.0
     # via
     #   -r src/requirements-app.txt
     #   importlib-metadata
