--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,5 +1,6 @@
 -r src/requirements-app.txt
 ansible
+shub==2.10.0
 pytest
 pytest-cov
 black
@@ -7,4 +8,5 @@ pre-commit
 pip-tools
 python-dotenv
 Pillow
-shub==2.10.0
+pyautogui
+scipy
