--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile --output-file=requirements-dev.txt requirements-dev.in
 #
-ansible==5.2.0
+ansible==5.4.0
     # via -r requirements-dev.in
-ansible-core==2.12.1
+ansible-core==2.12.2
     # via ansible
 anticaptchaofficial==1.0.34
     # via -r src/requirements-app.txt
@@ -36,7 +36,7 @@ automat==20.2.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-black==21.12b0
+black==22.1.0
     # via -r requirements-dev.in
 blinker==1.4
     # via
@@ -78,7 +78,7 @@ constantly==15.1.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-coverage[toml]==6.3
+coverage[toml]==6.3.2
     # via pytest-cov
 cryptography==3.4.8
     # via
@@ -102,7 +102,7 @@ docker-pycreds==0.4.0
     # via docker-py
 faker==11.3.0
     # via -r src/requirements-app.txt
-filelock==3.4.2
+filelock==3.6.0
     # via virtualenv
 flask==2.0.2
     # via
@@ -132,7 +132,7 @@ hyperlink==21.0.0
     # via
     #   -r src/requirements-app.txt
     #   twisted
-identify==2.4.6
+identify==2.4.11
     # via pre-commit
 idna==3.3
     # via
@@ -228,11 +228,11 @@ pathspec==0.9.0
     # via black
 pep517==0.12.0
     # via pip-tools
-pillow==9.0.0
+pillow==9.0.1
     # via -r requirements-dev.in
-pip-tools==6.4.0
+pip-tools==6.5.1
     # via -r requirements-dev.in
-platformdirs==2.4.1
+platformdirs==2.5.1
     # via
     #   black
     #   virtualenv
@@ -272,6 +272,8 @@ pycparser==2.21
     # via
     #   -r src/requirements-app.txt
     #   cffi
+pycryptodome==3.14.1
+    # via -r requirements-dev.in
 pydispatcher==2.0.5
     # via
     #   -r src/requirements-app.txt
@@ -305,7 +307,7 @@ pysocks==1.7.1
     # via
     #   -r src/requirements-app.txt
     #   selenium-wire
-pytest==6.2.5
+pytest==7.0.1
     # via
     #   -r requirements-dev.in
     #   pytest-cov
@@ -343,14 +345,14 @@ retrying==1.3.3
     # via
     #   scrapinghub
     #   shub
-ruamel.yaml==0.17.16
+ruamel-yaml==0.17.16
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
-ruamel.yaml.clib==0.2.6
+ruamel-yaml-clib==0.2.6
     # via
     #   -r src/requirements-app.txt
-    #   ruamel.yaml
+    #   ruamel-yaml
 scrapinghub==2.3.1
     # via shub
 scrapy==2.4.1
@@ -400,13 +402,13 @@ text-unidecode==1.3
 toml==0.10.2
     # via
     #   pre-commit
-    #   pytest
     #   shub
-tomli==1.2.3
+tomli==2.0.1
     # via
     #   black
     #   coverage
     #   pep517
+    #   pytest
 tornado==6.1
     # via
     #   -r src/requirements-app.txt
@@ -448,7 +450,7 @@ urwid==2.1.2
     # via
     #   -r src/requirements-app.txt
     #   mitmproxy
-virtualenv==20.13.0
+virtualenv==20.13.2
     # via pre-commit
 w3lib==1.22.0
     # via
@@ -479,7 +481,7 @@ zipp==3.7.0
     # via
     #   -r src/requirements-app.txt
     #   importlib-metadata
-zope.interface==5.4.0
+zope-interface==5.4.0
     # via
     #   -r src/requirements-app.txt
     #   scrapy
