--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -958,7 +958,7 @@ selenium==4.1.2
     #   -r src/requirements-app.txt
     #   selenium-wire
     #   undetected-chromedriver
-selenium-wire==4.6.1
+selenium-wire==4.6.3
     # via -r src/requirements-app.txt
 service-identity==21.1.0
     # via
@@ -1031,7 +1031,7 @@ typing-extensions==4.1.1
     #   twisted
 ujson==5.1.0
     # via -r src/requirements-app.txt
-undetected-chromedriver==3.1.3
+undetected-chromedriver==3.1.5.post4
     # via -r src/requirements-app.txt
 urllib3[secure,socks]==1.26.8
     # via
