--- a/src/requirements-app.txt
+++ b/src/requirements-app.txt
@@ -198,7 +198,7 @@ selenium==4.1.0
     #   -r src/requirements-app.in
     #   selenium-wire
     #   undetected-chromedriver
-selenium-wire==4.6.1
+selenium-wire==4.6.3
     # via -r src/requirements-app.in
 service-identity==21.1.0
     # via scrapy
@@ -234,7 +234,7 @@ typing-extensions==4.1.1
     # via twisted
 ujson==5.1.0
     # via -r src/requirements-app.in
-undetected-chromedriver==3.1.3
+undetected-chromedriver==3.1.5.post4
     # via -r src/requirements-app.in
 urllib3[secure,socks]==1.26.8
     # via
