--- a/src/requirements-app.txt
+++ b/src/requirements-app.txt
@@ -4,11 +4,11 @@
 #
 #    pip-compile --output-file=src/requirements-app.txt src/requirements-app.in
 #
-anticaptchaofficial==1.0.39
+anticaptchaofficial==1.0.40
     # via -r src/requirements-app.in
 appdirs==1.4.4
     # via pyppeteer
-asgiref==3.5.1
+asgiref==3.5.2
     # via mitmproxy
 async-generator==1.10
     # via
@@ -33,7 +33,7 @@ brotli==1.0.9
     # via
     #   mitmproxy
     #   selenium-wire
-certifi==2021.10.8
+certifi==2022.5.18.1
     # via
     #   mitmproxy
     #   pyppeteer
@@ -61,7 +61,7 @@ cssselect==1.1.0
     # via
     #   parsel
     #   scrapy
-faker==13.11.0
+faker==13.11.1
     # via -r src/requirements-app.in
 flask==2.0.3
     # via mitmproxy
@@ -88,7 +88,7 @@ idna==3.3
     #   requests
     #   trio
     #   urllib3
-importlib-metadata==4.11.3
+importlib-metadata==4.11.4
     # via pyppeteer
 incremental==21.3.0
     # via twisted
@@ -120,7 +120,7 @@ mitmproxy==8.0.0
     # via -r src/requirements-app.in
 msgpack==1.0.3
     # via mitmproxy
-numpy==1.22.3
+numpy==1.22.4
     # via
     #   bezier
     #   opencv-python
@@ -134,6 +134,8 @@ parsel==1.6.0
     #   scrapy
 passlib==1.7.4
     # via mitmproxy
+pillow==9.1.1
+    # via -r src/requirements-app.in
 protego==0.2.1
     # via scrapy
 protobuf==3.19.4
@@ -234,7 +236,7 @@ twisted==22.4.0
     # via scrapy
 typing-extensions==4.2.0
     # via twisted
-ujson==5.2.0
+ujson==5.3.0
     # via -r src/requirements-app.in
 undetected-chromedriver==3.1.5.post4
     # via -r src/requirements-app.in
